[package]
name = "bitcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
